Fixed font on IE

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,56 +26,76 @@ $eventSnitchYellow: #ffdf46;
 // --------------------------------------------------
 @font-face {
   font-family: "Moon Bold";
-  src: url('../Content/fonts/Moon Light.eot'); /* IE9 Compat Modes */
-  src: url('../Content/fonts/Moon Bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-     url("../Content/fonts/Moon Bold.otf");
+  src: url('../Content/fonts/Moon-Bold.eot'); /* IE9 Compat Modes */
+  src: url('../Content/fonts/Moon-Bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+     url('../Content/fonts/Moon-Bold.otf');
 }
 @font-face {
   font-family: "Moon Light";
-  src: url('../Content/fonts/Moon Light.eot'); /* IE9 Compat Modes */
-  src: url('../Content/fonts/Moon Light.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-     url("../Content/fonts/Moon Light.otf");
+  src: url('../Content/fonts/Moon-Light.eot'); /* IE9 Compat Modes */
+  src: url('../Content/fonts/Moon-Light.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+     url('../Content/fonts/Moon-Light.otf');
 }
 @font-face {
   font-family: "OpenSans Bold";
-  src: url("../Content/fonts/OpenSans-Bold.ttf") format('truetype');
-}
-@font-face {
-  font-family: "OpenSans BoldItalic";
-  src: url("../Content/fonts/OpenSans-BoldItalic.ttf") format('truetype');
-}
-@font-face {
-  font-family: "OpenSans ExtraBold";
-  src: url("../Content/fonts/OpenSans-ExtraBold.ttf") format('truetype');
-}
-@font-face {
-  font-family: "OpenSans ExtraBoldItalic";
-  src: url("../Content/fonts/OpenSans-ExtraBoldItalic.ttf") format('truetype');
-}
-@font-face {
-  font-family: "OpenSans Italic";
-  src: url("../Content/fonts/OpenSans-Italic.ttf") format('truetype');
+  src: url('../Content/fonts/OpenSans-Bold.eot'); /* IE9 Compat Modes */
+  src: url('../Content/fonts/OpenSans-Bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('../Content/fonts/OpenSans-Bold.ttf');
 }
 @font-face {
   font-family: "OpenSans Light";
-  src: url("../Content/fonts/OpenSans-Light.ttf") format('truetype');
-}
-@font-face {
-  font-family: "OpenSans LightItalic";
-  src: url("../Content/fonts/OpenSans-LightItalic.ttf") format('truetype');
+  src: url('../Content/fonts/OpenSans-Light.eot'); /* IE9 Compat Modes */
+  src: url('../Content/fonts/OpenSans-Light.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('../Content/fonts/OpenSans-Light.ttf');
 }
 @font-face {
   font-family: "OpenSans Regular";
-  src: url("../Content/fonts/OpenSans-Regular.ttf") format('truetype');
+  src: url('../Content/fonts/OpenSans-Regular.eot'); /* IE9 Compat Modes */
+  src: url('../Content/fonts/OpenSans-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('../Content/fonts/OpenSans-Regular.ttf');
 }
 @font-face {
   font-family: "OpenSans Semibold";
-  src: url("../Content/fonts/OpenSans-Semibold.ttf") format('truetype');
+  src: url('../Content/fonts/OpenSans-Semibold.eot'); /* IE9 Compat Modes */
+  src: url('../Content/fonts/OpenSans-Semibold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('../Content/fonts/OpenSans-Semibold.ttf');
 }
-@font-face {
-  font-family: "OpenSans SemiboldItalic";
-  src: url("../Content/fonts/OpenSans-SemiboldItalic.ttf") format('truetype');
-}
+//@font-face {
+//  font-family: "OpenSans ExtraBold"; 
+//  src: url('../Content/fonts/OpenSans-ExtraBold.eot'); /* IE9 Compat Modes */
+//  src: url('../Content/fonts/OpenSans-ExtraBold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+//    url('../Content/fonts/OpenSans-ExtraBold.ttf');
+//}
+//@font-face {
+//  font-family: "OpenSans BoldItalic";
+//  src: url('../Content/fonts/OpenSans-BoldItalic.eot'); /* IE9 Compat Modes */
+//  src: url('../Content/fonts/OpenSans-BoldItalic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+//    url('../Content/fonts/OpenSans-BoldItalic.ttf');
+//}
+//@font-face {
+//  font-family: "OpenSans ExtraBoldItalic";
+//  src: url('../Content/fonts/OpenSans-ExtraBoldItalic.eot'); /* IE9 Compat Modes */
+//  src: url('../Content/fonts/OpenSans-ExtraBoldItalic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+//    url('../Content/fonts/OpenSans-ExtraBoldItalic.ttf');
+//}
+//@font-face {
+//  font-family: "OpenSans Italic";
+//  src: url('../Content/fonts/OpenSans-Italic.eot'); /* IE9 Compat Modes */
+//  src: url('../Content/fonts/OpenSans-Italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+//    url('../Content/fonts/OpenSans-Italic.ttf');
+//}
+//@font-face {
+//  font-family: "OpenSans LightItalic";
+//  src: url('../Content/fonts/OpenSans-LightItalic.eot'); /* IE9 Compat Modes */
+//  src: url('../Content/fonts/OpenSans-LightItalic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+//    url('../Content/fonts/OpenSans-LightItalic.ttf');
+//}
+//@font-face {
+//  font-family: "OpenSans SemiboldItalic";
+//  src: url('../Content/fonts/OpenSans-SemiboldItalic.eot'); /* IE9 Compat Modes */
+//  src: url('../Content/fonts/OpenSans-SemiboldItalic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+//    url('../Content/fonts/OpenSans-SemiboldItalic.ttf');
+//}
 
 // Common HTML elements
 // --------------------------------------------------
@@ -360,8 +380,7 @@ button:focus {
   text-align: center;
 }
 .list_footer_item_selected {
-  font-weight: bold;
-  font-family: "OpenSans ExtraBold";
+  font-family: "OpenSans Bold";
   text-align: center;
 }
 .list_footer_item_input_label {
@@ -553,7 +572,7 @@ button:focus {
     margin-bottom: 15px;
   }
   &_sub_title {
-    font-family: "Opensans SemiBold";
+    font-family: "Opensans Semibold";
     font-size: 18px;
     margin-bottom: 10px;
     margin-top: 15px;
@@ -1016,7 +1035,7 @@ input.common_modal {
     margin: 0;
     color: $popUpShadeBlue;
     font: 600 16px/18px;
-    font-family: "OpenSans SemiBold";
+    font-family: "OpenSans Semibold";
     *,:after, :before {
       box-sizing:border-box;
     }
@@ -2419,7 +2438,7 @@ input.common_modal {
       padding-bottom: 0; 
       &-title {
         font-size: 15px;
-        font-family: "OpenSans SemiBold";
+        font-family: "OpenSans Semibold";
       }
       &-text {
         white-space: pre-line;
@@ -2524,7 +2543,7 @@ input.common_modal {
 .chat_header_title {
   margin-left: 5px;
   text-transform: uppercase;
-  font-family: OpenSans SemiBold;
+  font-family: "OpenSans Semibold";
   top: 8px;
   position: absolute;
 }
@@ -2534,7 +2553,7 @@ input.common_modal {
   top: 8px;
 }
 .chat_header_span {
-  font-family: "OpenSans SemiBold";
+  font-family: "OpenSans Semibold";
   font-size: 14px;
   margin-left: 10px;
 }
